force-app/main/default/objects/Incentive_Snapshot_Parent_Seed_Detail__c/Incentive_Snapshot_Parent_Seed_Detail__c.object-meta.xml
<CustomObject>
    <label>Incentive Snapshot Parent Seed Detail</label>
    <nameField>
        <label>Incentive Snapshot Parent Seed Detail Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Snapshot Parent Seed Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>