force-app/main/default/objects/Incentive_Snapshot_Parent_Seed_Detail__c/fields/Incentive_Contract_Parent_Seed_Goal__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Contract_Parent_Seed_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Contract Parent Seed Goal</label>
    <referenceTo>Incentive_Contract_Parent_Seed_Goal__c</referenceTo>
    <relationshipLabel>Incentive Snapshot Parent Seed Details</relationshipLabel>
    <relationshipName>Incentive_Snapshot_Parent_Seed_Details</relationshipName>
    <type>Lookup</type>
</CustomField>