force-app/main/default/objects/Incentive_Snapshot_Parent_Seed_Detail__c/fields/Incentive_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Snapshot__c</fullName>
    <label>Incentive Snapshot</label>
    <referenceTo>Incentive_Snapshot__c</referenceTo>
    <relationshipLabel>Incentive Snapshot Parent Seed Details</relationshipLabel>
    <relationshipName>Incentive_Snapshot_Parent_Seed_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>