force-app/main/default/objects/Incentive_Snapshot_Parent_Seed_Detail__c/fields/Quantities_Acomplished__c.field-meta.xml
<CustomField>
    <fullName>Quantities_Acomplished__c</fullName>
    <label>Quantities Acomplished</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>